syntax = "proto3";

import "google/protobuf/empty.proto";

package module;

service Modules {
  rpc Run (RunRequest) returns (google.protobuf.Empty);
  rpc List (google.protobuf.Empty) returns (ListResponse);
  rpc Stop (StopRequest) returns (google.protobuf.Empty);
  rpc Restart (RestartRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
  rpc Logs(LogRequest) returns (stream LogResponse);
}

message RunRequest {
  string path = 1;
}

enum ModuleStatus {
  Running = 0;
  Finished = 1;
  Error = 2;
  Stopped = 3;
}

message Module {
  string id = 1;
  string path = 2;
  ModuleStatus status = 3;
}

message ListResponse {
  repeated Module modules = 1;
}

message StopRequest {
  string id = 1;
}

message RestartRequest {
  string id = 1;
}

message DeleteRequest {
  string id = 1;
}

message LogRequest {
  string id = 1;
  bool follow = 2;
  uint32 tail = 3;
}

message LogResponse {
  string content = 1;
}
